(ranger) update key mapping for moving to trash

--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -88,8 +88,8 @@ set unicode_ellipsis false
 set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
-# default, jungle, snow, solarized
-set colorscheme default
+# default, jungle, snow
+set colorscheme solarized
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -374,6 +374,9 @@ map ud uncut
 map da cut mode=add
 map dr cut mode=remove
 map dt cut mode=toggle
+
+# Move to trash
+map DD shell mv -t /home/dhn24/.local/share/Trash/files %s
 
 map yy copy
 map uy uncut
