--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -43,7 +43,7 @@ set confirm_on_delete multiple
 # Which script is used to generate file previews?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README.md for dependencies) to preview images, archives, etc.
-set preview_script ~/.config/ranger/scope.sh
+set preview_script ~/.ranger/scope.sh
 
 # Use the external preview script or display simple plain text or image previews?
 set use_preview_script true
@@ -66,7 +66,7 @@ set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
