--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
-atom.symlink/blob-store
-atom.symlink/compile-cache/
-atom.symlink/packages
-atom.symlink/storage
-atom.symlink/themes
-
 git/gitconfig.local.symlink
 system/env.local.zsh
 bin/tig
 
 *.pyc
+*.zwc
 fontList.cache
 ez_setup.py
