--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -58,12 +58,13 @@ set open_all_images true
 # Be aware of version control systems and display information.
 set vcs_aware false
 
-# State of the three backends git, hg, bzr. The possible states are
+# State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
 # information).
 set vcs_backend_git enabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
+set vcs_backend_svn disabled
 
 # Use one of the supported image preview protocols
 set preview_images true
@@ -119,6 +120,7 @@ set mouse_enabled true
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
 set display_size_in_status_bar true
+set display_free_space_in_status_bar false
 
 # Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
@@ -259,8 +261,8 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%space
-map f  console find%space
+map r  chain draw_possible_programs; console open_with%%space
+map f  console scout -ftsea%space
 map cd console cd%space
 
 # Change the line mode
@@ -343,12 +345,12 @@ map g/ cd /
 map g? cd /usr/share/doc/ranger
 
 # External Programs
-map E  edit
+map E  shell -f nvr --remote-tab-silent %f
 map du shell -p du --max-depth=1 -h --apparent-size
 map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
-map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
-map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
-map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
+map yp shell -f echo -n %d/%f | xclip -selection clipboard
+map yd shell -f echo -n %d    | xclip -selection clipboard
+map yn shell -f echo -n %f    | xclip -selection clipboard
 
 # Filesystem Operations
 map =  chmod
@@ -376,7 +378,7 @@ map dr cut mode=remove
 map dt cut mode=toggle
 
 # Move to trash
-map DD shell mv -t /home/dhn24/.local/share/Trash/files %s
+map DD shell mv -t /usr2/danhnguy/.local/share/Trash/files %s
 
 map yy copy
 map uy uncut
@@ -414,7 +416,7 @@ map <A-Right> tab_move 1
 map <A-Left>  tab_move -1
 map gt        tab_move 1
 map gT        tab_move -1
-map gn        tab_new ~
+map gn        eval fm.tab_new('%d')
 map gc        tab_close
 map uq        tab_restore
 map <a-1>     tab_open 1
@@ -464,6 +466,7 @@ map zs    set sort_case_insensitive!
 map zu    set autoupdate_cumulative_size!
 map zv    set use_preview_script!
 map zf    console filter%space
+map F console chain flat -1; filter
 
 # Bookmarks
 map `<any>  enter_bookmark %any
@@ -605,3 +608,31 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# Quick editing rc.conf
+map X chain shell vim -p ~/.ranger/rc.conf %rangerdir/config/rc.conf; source ~/.ranger/rc.conf
+
+# Smart cw
+map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
+
+# Integrate with tmux splits and windows
+map eW shell tmux new-window rifle %f
+
+# Forking these shells to avoid glitter as tmux will keep them open
+map ev shell -f tmux split-window -h 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket vim %f'
+map es shell -f tmux split-window -v 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket vim %f'
+map eV shell -f tmux split-window -h './%s'
+map eS shell -f tmux split-window -v './%s'
+
+# diff
+map vdv shell -f tmux split-window -h 'vimdiff %c %s'
+map vds shell -f tmux split-window -v 'vimdiff %c %s'
+map fdv shell -f tmux split-window -h 'dirdiff %c %s'
+map fds shell -f tmux split-window -v 'dirdiff %c %s'
+
+# search
+map sv shell -f tmux split-window -h vim -c ':Denite -buffer-name=grep -start-filter grep:::!'
+map ss shell -f tmux split-window -v vim -c ':Denite -buffer-name=grep -start-filter grep:::!'
+
+
+
