--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -610,7 +610,7 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Quick editing rc.conf
-map X chain shell vim -p ~/.ranger/rc.conf %rangerdir/config/rc.conf; source ~/.ranger/rc.conf
+map X chain shell nvim -p ~/.ranger/rc.conf %rangerdir/config/rc.conf; source ~/.ranger/rc.conf
 
 # Smart cw
 map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
@@ -619,20 +619,21 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 map eW shell tmux new-window rifle %f
 
 # Forking these shells to avoid glitter as tmux will keep them open
-map ev shell -f tmux split-window -h 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket vim %f'
-map es shell -f tmux split-window -v 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket vim %f'
+map eh shell -f tmux split-window -v 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim'
+map ev shell -f tmux split-window -h 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
+map es shell -f tmux split-window -v 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
 map eV shell -f tmux split-window -h './%s'
 map eS shell -f tmux split-window -v './%s'
 
 # diff
-map vdv shell -f tmux split-window -h 'vimdiff %c %s'
-map vds shell -f tmux split-window -v 'vimdiff %c %s'
+map vdv shell -f tmux split-window -h 'nvim -d %c %s'
+map vds shell -f tmux split-window -v 'nvim -d %c %s'
 map fdv shell -f tmux split-window -h 'dirdiff %c %s'
 map fds shell -f tmux split-window -v 'dirdiff %c %s'
 
 # search
-map sv shell -f tmux split-window -h vim -c ':Denite -buffer-name=grep -start-filter grep:::!'
-map ss shell -f tmux split-window -v vim -c ':Denite -buffer-name=grep -start-filter grep:::!'
+map sv shell -f tmux split-window -h nvim -c ':Denite -buffer-name=grep -start-filter grep:::!'
+map ss shell -f tmux split-window -v nvim -c ':Denite -buffer-name=grep -start-filter grep:::!'
 
 
 
