--- a/ranger/ranger.symlink/rifle.conf
+++ b/ranger/ranger.symlink/rifle.conf
@@ -162,6 +162,7 @@ ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, f
 ext djvu, has zathura,X, flag f = zathura -- "$@"
 ext djvu, has evince, X, flag f = evince -- "$@"
 ext djvu, has atril,  X, flag f = atril -- "$@"
+ext hdf, has APEX, X, flag f = APEX "$@"
 
 #-------------------------------------------
 # Image Viewing:
