Removed antigen. Update zsh and vim

--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -619,9 +619,9 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 map eW shell tmux new-window rifle %f
 
 # Forking these shells to avoid glitter as tmux will keep them open
-map eh shell -f tmux split-window -v 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim'
-map ev shell -f tmux split-window -h 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
-map es shell -f tmux split-window -v 'NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
+map eh shell -f tmux split-window -v 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim'
+map ev shell -f tmux split-window -h 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
+map es shell -f tmux split-window -v 'env NVIM_LISTEN_ADDRESS=/tmp/nvimsocket nvim %f'
 map eV shell -f tmux split-window -h './%s'
 map eS shell -f tmux split-window -v './%s'
 
