--- a/ranger/ranger.symlink/rifle.conf
+++ b/ranger/ranger.symlink/rifle.conf
@@ -136,6 +136,16 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
 mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
+
+#-------------------------------------------
+# Misc
+#-------------------------------------------
+# Use LaunchServices to open file with default macOS application
+has open, flag f = open "$@"
+ext pdf, has texshop, flag f = texshop "$@"
+ext bib, has bibdesk, flag f = bibdesk "$@"
+
+
 #-------------------------------------------
 # Documents
 #-------------------------------------------
@@ -176,7 +186,7 @@ mime ^image, has feh,       X, flag f = feh -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
-mime ^image, has eom,       X, flag f = eom -- "$@"
+mime ^image, has eom,       X, flag f = eom -- "@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
 
@@ -208,3 +218,4 @@ label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" 
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
 mime application/x-executable = "$1"
+
