--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -80,7 +80,7 @@ set preview_images true
 #   Preview images in full color using iTerm2 image previews
 #   (http://iterm2.com/images.html). This requires using iTerm2 compiled
 #   with image preview support.
-set preview_images_method w3m
+set preview_images_method iterm2
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
@@ -261,7 +261,7 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
+map r  chain draw_possible_programs; console open_with%space
 map f  console scout -ftsea%space
 map cd console cd%space
 
@@ -378,7 +378,8 @@ map dr cut mode=remove
 map dt cut mode=toggle
 
 # Move to trash
-map DD shell mv -t /usr2/danhnguy/.local/share/Trash/files %s
+#  map DD shell mv -t /usr2/danhnguy/.local/share/Trash/files %s
+map DD shell trash %s
 
 map yy copy
 map uy uncut
