Update from Amz mac

--- a/ranger/ranger.symlink/rc.conf
+++ b/ranger/ranger.symlink/rc.conf
@@ -67,7 +67,7 @@ set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 
 # Use one of the supported image preview protocols
-set preview_images true
+set preview_images false
 
 # Set the preview image method. Supported methods:
 #
@@ -348,9 +348,9 @@ map g? cd /usr/share/doc/ranger
 map E  shell -f nvr --remote-tab-silent %f
 map du shell -p du --max-depth=1 -h --apparent-size
 map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
-map yp shell -f echo -n %d/%f | xclip -selection clipboard
-map yd shell -f echo -n %d    | xclip -selection clipboard
-map yn shell -f echo -n %f    | xclip -selection clipboard
+map yp shell -f echo -n %d/%f | pbcopy
+map yd shell -f echo -n %d    | pbcopy
+map yn shell -f echo -n %f    | pbcopy
 
 # Filesystem Operations
 map =  chmod
